Fix setting new current item after file deletion

Summary:
After deleting one or more selected files and current item is not one
of these, the current item is moved one down.
This patch modifies `KrView::firstUnmarkedBelowCurrent()` to not make
an additional step down in finding the next unselected item.

BUG: 389869

Test Plan:
1. Create a folder with 5 files "file1".."file5"
2. Select "file1" and "file2"
3. Set current item to "file3"
4. Press {key Del} and delete selected files
-> The current item should stay on "file3"

Reviewers: #krusader, martinkostolny

Reviewed By: #krusader, martinkostolny

Subscribers: martinkostolny, asensi

Differential Revision: https://phabricator.kde.org/D10385